@@ -1,3 +1,12 @@
+2003-10-23  Andreas Kupries  <andreask@activestate.com>
+
+	* win/tclWinSock.c (TcpWatchProc): Watch for FD_CLOSE too when
+	  asked for writable events by the generic layer.
+	  (SocketEventProc): Generate a writable event too when a close is
+	  detected.
+
+	  Together the changes fix [Bug 599468].
+
 2003-10-23  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	* tests/resource.test:
